--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.thijsrijpert.rekeningrijden">
-
+    <uses-permission
+        android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission
+        android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,7 +15,8 @@
         android:theme="@style/AppThemeNoBar"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name="com.thijsrijpert.rekeningrijden.Controller.ViewControllers.ActivityController.LoginActivity">
+            android:name="com.thijsrijpert.rekeningrijden.Controller.ViewControllers.ActivityController.LoginActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
